--- a/src/main/java/UI/CourseSupplier/DepartmentWorkAreaJPanel.form
+++ b/src/main/java/UI/CourseSupplier/DepartmentWorkAreaJPanel.form
@@ -24,11 +24,9 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="400" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnProductPerformance" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnUpdateProfile" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnUpdateStaff" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnManageProductCatalog" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="btnManageProductCatalog" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
                   <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
               </Group>
@@ -43,13 +41,7 @@
               <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
               <Component id="btnManageProductCatalog" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnProductPerformance" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnUpdateProfile" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnUpdateStaff" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="333" max="32767" attributes="0"/>
+              <EmptySpace pref="420" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -60,42 +52,18 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Supplier Work Area"/>
+        <Property name="text" type="java.lang.String" value="Department Work Area"/>
         <Property name="horizontalTextPosition" type="int" value="2"/>
         <Property name="iconTextGap" type="int" value="100"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnManageProductCatalog">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Manage Product Catalog &gt;&gt;"/>
+        <Property name="text" type="java.lang.String" value="Manage Course Catalog &gt;&gt;"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManageProductCatalogActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnProductPerformance">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Review Product Performance &gt;&gt;"/>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProductPerformanceActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnUpdateProfile">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Update Personal Profile &gt;&gt;"/>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateProfileActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnUpdateStaff">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Manage Staff"/>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
