--- a/src/main/java/UI/CourseSupplier/SearchForCourseJPanel.form
+++ b/src/main/java/UI/CourseSupplier/SearchForCourseJPanel.form
@@ -66,7 +66,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Search for Product"/>
+        <Property name="text" type="java.lang.String" value="Search for Course"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
@@ -79,7 +79,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductId">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Id:"/>
+        <Property name="text" type="java.lang.String" value="Course Id:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtId">
