--- a/src/main/java/UI/CourseSupplier/ViewCourseDetailJPanel.form
+++ b/src/main/java/UI/CourseSupplier/ViewCourseDetailJPanel.form
@@ -21,29 +21,38 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="207" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblProductId" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblProductName" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblProductPrice" alignment="1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnSave" min="-2" pref="123" max="-2" attributes="0"/>
-                  <Component id="btnUpdate" min="-2" pref="121" max="-2" attributes="0"/>
-                  <Component id="txtName" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-                  <Component id="txtId" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-                  <Component id="txtPrice" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="196" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Component id="btnBack" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="172" max="-2" attributes="0"/>
               <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="180" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="lblProductPrice1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="txtPrice1" min="-2" pref="159" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="lblProductId" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductName" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductPrice" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btnSave" min="-2" pref="123" max="-2" attributes="0"/>
+                          <Component id="btnUpdate" min="-2" pref="121" max="-2" attributes="0"/>
+                          <Component id="txtName" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="txtId" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="txtPrice" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="212" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,11 +79,16 @@
                   <Component id="lblProductPrice" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtPrice" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblProductPrice1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtPrice1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Component id="btnUpdate" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnSave" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="296" max="32767" attributes="0"/>
+              <EmptySpace pref="264" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -142,6 +156,16 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtPrice1">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblProductPrice1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Course Number:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
